--- a/skin/frontend/default/pro/css/pro.css
+++ b/skin/frontend/default/pro/css/pro.css
@@ -1,4 +1,16 @@
-body {background: none;}
+@font-face
+{
+    font-family: PFDinTextCompPro;
+    src: url(../fonts/PFDinTextCompPro-Light.ttf),
+    url(../fonts/PFDinTextCompPro-Light.eot); /* IE9 */
+}
+
+body {
+    background-image: none;
+    background-color: #e1e1e1;
+    font-size: 13px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
 .header-container {background: none; border: none 0;}
 .nav-container {background: none;}
 .main-container {background: none;}
@@ -7,7 +19,68 @@ body {background: none;}
 .header .form-search {background: none}
 .header .logo {display: block; margin: 0 auto; padding: 0; float: none; text-align: center;}
 /*.quick-access {display: none;}*/
-.main {background: none;}
+.main {background: none; width: 1000px;}
 .block {border: none 0;}
 .block .block-content {background: none;}
 .block .block-title {background: none; text-indent: 0;}
+.col-left {width: 142px;}
+.col3-layout .col-wrapper {width: 800px;}
+.col3-layout .col-main {width: 600px;}
+.category-products .toolbar {margin-bottom: 10px;}
+.products-grid {margin: 0 -15px;}
+.products-grid .product-image {width: 180px; height: 180px; margin: 0;}
+.products-grid li.item {position: relative; width: 180px; margin: 0 15px 20px 15px; padding: 0;}
+.products-grid li.item .item-info {
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 13px;
+    background-image: url(../images/misc/cross.png);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-color: #fff;
+    background-color: rgba(225,225,225,0.7);
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+.products-grid li.item:hover .item-info {opacity: 1;}
+.products-grid .product-name,
+.products-grid .price-box {position: absolute; width: 100%;left: 0; box-sizing: border-box; padding: 0 8px;}
+.products-grid .product-name {bottom: 50%; margin-bottom: 20px; font-size: 13px; font-weight: normal;}
+.products-grid .product-name a {text-decoration: none; color: #333333;}
+.products-grid .price-box {top:50%; margin-top: 20px;}
+.products-grid .actions {width: 100%; text-align: center; top: 50%; margin-top: 50px;}
+.b-asideLogo {
+    display: block;
+    margin: 0 auto 25px auto;
+    width: 142px;
+    height: 141px;
+    background: url(../images/p.png) 50% 0 no-repeat;
+}
+
+.b-asideNav {
+    font-family: PFDinTextCompPro, Arial;
+    font-weight: bold;
+    font-size: 14px;
+    color: #717171;
+    background: url(../images/misc/delimiter.png) 0 0 repeat-x;
+    padding: 2px 0 0 0;
+}
+.b-asideNav-item {
+    display: block;
+    text-transform: uppercase;
+    line-height: 1;
+    vertical-align: middle;
+    text-decoration: none;
+    padding: 10px 0 8px 0;
+    text-align: center;
+    background: url(../images/misc/delimiter.png) 0 100% repeat-x;
+}
+a.b-asideNav-item {color: #717171;}
+a.b-asideNav-item:hover {text-decoration: none; color: #000000;}
