--- a/app/design/frontend/default/pro/layout/local.xml
+++ b/app/design/frontend/default/pro/layout/local.xml
@@ -1,17 +1,64 @@
 <?xml version="1.0"?>
 <layout version="0.1.0">
     <default>
-        <remove name="left.permanent.callout"/>
-        <remove name="right.permanent.callout"/>
-        <remove name="paypal.partner.right.logo"/>
         <reference name="head">
             <action method="addCss">
                 <stylesheet>css/pro.css</stylesheet>
             </action>
         </reference>
+
+
+        <reference name="root">
+            <action method="setTemplate">
+                <template>page/3columns.phtml</template>
+                <action method="setIsHandle">
+                    <applied>1</applied>
+                </action>
+            </action>
+        </reference>
+
+        <remove name="left.permanent.callout"/>
+        <remove name="right.permanent.callout"/>
+        <remove name="paypal.partner.right.logo"/>
+        <remove name="left.reports.product.viewed"/>
+        <remove name="right.reports.product.viewed"/>
+        <remove name="left.newsletter"/>
         <remove name="top.search"/>
+        <remove name="breadcrumbs"/>
+        <!--
         <reference name="top.container">
-            <block type="core/text" template="pro/nav_cms.phtml"></block>
+            <block type="devils_pro/default" template="pro/nav/collections.phtml"></block>
+            <block type="devils_pro/default" template="pro/nav/categories.phtml"></block>
+        </reference>
+        -->
+        <reference name="left">
+            <block type="devils_pro/default" template="pro/nav/cms.phtml"></block>
+        </reference>
+        <reference name="right">
+            <remove name="cart_sidebar"/>
+            <remove name="catalog.compare.sidebar"/>
+        </reference>
+        <reference name="top.menu">
+            <action method="unsetChild"><name>catalog.topnav</name></action>
+        </reference>
+        <reference name="header">
+            <action method="unsetChild"><name>welcome</name></action>
+            <action method="unsetChild"><name>topLinks</name></action>
+        </reference>
+        <reference name="content">
+            <action method="insert">
+                <blockName>catalog.topnav</blockName>
+                <before>0</before>
+            </action>
         </reference>
     </default>
+
+    <catalog_category_layered translate="label">
+        <remove name="catalog.leftnav"></remove>
+        <reference name="right">
+            <block type="catalog/layer_view" name="catalog.rightnav" after="currency"
+                   template="catalog/layer/view.phtml"/>
+        </reference>
+    </catalog_category_layered>
+
 </layout>
